# dynamic_ws

./: .gitignore  .gitmodules  README.md  RVIZ_DISPLAY_FIX.md  RVIZ_IK_VISUALIZATION.md  RVIZ_QUICKSTART.md  W10_DH_GUIDE.md  W10_KINEMATICS_QUICKREF.md  W10_KINEMATICS_SETUP.md  W10_PINOCCHIO_DEBUG.md  W10_URDF_ISSUE.md  fix_w10_urdf.py
src/w10_moveit_kinematics/: API_REFERENCE.md  CMakeLists.txt  QUICK_START.md  README-CN.md  package.xml
src/w10_moveit_kinematics/.cleanup_backup_1774852698/: ik_diagnosis.py  inverse_kinematics_demo_v2.py  test_system.py
src/w10_moveit_kinematics/kinematics_experiments/: __init__.py
src/w10_moveit_kinematics/kinematics_experiments/scripts/: forward_kinematics_demo.py  interactive_kinematics.py  inverse_kinematics_demo.py  joint_state_publisher.py  motion_planning_demo.py
src/w10_moveit_kinematics/kinematics_experiments/src/: kinematics_solver.py
src/w10_moveit_kinematics/w10_moveit_config/config/: joint_limits.yaml  kinematics.yaml  moveit_planning_adapters.yaml  w10_sim.srdf
src/w10_moveit_kinematics/w10_moveit_config/launch/: move_group.launch.py  move_group_minimal.launch.py
src/w10_sim/: CMakeLists.txt  RVIZ_GUIDE.md  dh_params.csv  dh_params.md  dh_params.py  dh_params.tex  package.xml
src/w10_sim/config/: vi_params.yaml
src/w10_sim/launch/: ctsvi_ad.launch.py  ctsvi_w10.launch.py  display_urdf.launch.py  display_urdf_headless.launch.py
src/w10_sim/meshes/: Link1.STL  Link2.STL  Link3.STL  Link4.STL  Link5.STL  Link6.STL  Link7.STL  Link8.STL  base_link.STL
src/w10_sim/rviz/: w10.rviz
src/w10_sim/scripts/: analyze_vi_results.py  extract_dh_params.py  generate_urdf_from_dh.py  rviz_diagnose.py  w10_joint_controller.py
src/w10_sim/src/: ctsvi_ad_node.cpp  ctsvi_w10_node.cpp
src/w10_sim/urdf/: 1_pendulum.urdf  w10.urdf  w10.urdf.bak  w10.urdf.complex  w10_canonical.urdf  w10new.urdf
