<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>w10_moveit_kinematics</name>
  <version>0.1.0</version>
  <description>MoveIt2-based kinematics framework for W10 7-DOF robotic arm</description>
  <maintainer email="user@example.com">User</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>moveit_ros_move_group_interface</depend>
  <depend>moveit_common</depend>
  <depend>moveit_core</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>w10_sim</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
