<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>w10_sim</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="hyang@buaa.edu.cn">user</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>Eigen3</depend>
  <depend>pinocchio</depend>
  <depend>cppad</depend>
  <depend>coal</depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz2</depend>
  <depend>launch_ros</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
